[gd_scene load_steps=13 format=3 uid="uid://c5qc87hij2hep"]

[ext_resource type="Script" path="res://src/ExerciseEditor/exercise_editor.gd" id="1_sslhb"]
[ext_resource type="FontFile" uid="uid://chygow7my3v5g" path="res://Assets/Fonts/NotoSansMyanmar-Regular.ttf" id="2_tt6nc"]
[ext_resource type="Script" path="res://src/ExerciseEditor/LinesList.gd" id="3_5mn8u"]

[sub_resource type="InputEventKey" id="InputEventKey_iny2v"]
device = -1
ctrl_pressed = true
keycode = 78
unicode = 110

[sub_resource type="Shortcut" id="Shortcut_jhxwp"]
events = [SubResource("InputEventKey_iny2v")]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ybjo2"]
bg_color = Color(0.258824, 0.207843, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_15h77"]
bg_color = Color(0.431373, 0.352941, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s5x36"]
bg_color = Color(0.145098, 0.113725, 0, 1)

[sub_resource type="GDScript" id="GDScript_5es36"]
script/source = "extends Button



func _on_pressed() -> void:
	SceneChanger.change_to_playground_scene()
	pass # Replace with function body.
"

[sub_resource type="InputEventKey" id="InputEventKey_ij67c"]
device = -1
shift_pressed = true
keycode = 4194312

[sub_resource type="InputEventKey" id="InputEventKey_i8dfn"]
device = -1
shift_pressed = true
keycode = 4194308

[sub_resource type="Shortcut" id="Shortcut_gols1"]
events = [SubResource("InputEventKey_ij67c"), SubResource("InputEventKey_i8dfn")]

[node name="ExerciseEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sslhb")

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Choose Difficulites:"

[node name="DifficulitiesButtons" type="VBoxContainer" parent="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="BasicBtn" type="Button" parent="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer/DifficulitiesButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Basic"

[node name="IntermediateBtn" type="Button" parent="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer/DifficulitiesButtons"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "Intermediate
"

[node name="AdvancedBtn" type="Button" parent="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer/DifficulitiesButtons"]
unique_name_in_owner = true
layout_mode = 2
toggle_mode = true
text = "Advanced"

[node name="CancelBtn" type="Button" parent="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer/DifficulitiesButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Cancel"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="LessonIdsLbl" type="Label" parent="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "No Difficulty Selected
"

[node name="LessonIds" type="ItemList" parent="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="AddNewLessonsFileBtn" type="Button" parent="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_jhxwp")
text = "Add New (Ctrl+N)"

[node name="PlaygroundBtn" type="Button" parent="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ybjo2")
theme_override_styles/hover = SubResource("StyleBoxFlat_15h77")
theme_override_styles/pressed = SubResource("StyleBoxFlat_s5x36")
text = "Go to Playground"
script = SubResource("GDScript_5es36")

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="Label2" type="Label" parent="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Lines:"

[node name="LinesList" type="ItemList" parent="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_tt6nc")
theme_override_font_sizes/font_size = 20
script = ExtResource("3_5mn8u")

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="LineEdit" type="LineEdit" parent="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("2_tt6nc")
theme_override_font_sizes/font_size = 20
virtual_keyboard_enabled = false
language = "my_MM"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="AddUpdteLineBtn" type="Button" parent="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
text = "Add Line"

[node name="ResetBtn" type="Button" parent="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
shortcut = SubResource("Shortcut_gols1")
text = "Reset (Shift+Del/Backspace)"

[node name="RemoveLineBtn" type="Button" parent="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Remove Line"

[connection signal="pressed" from="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer/DifficulitiesButtons/BasicBtn" to="." method="_on_basic_btn_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer/DifficulitiesButtons/IntermediateBtn" to="." method="_on_intermediate_btn_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer/DifficulitiesButtons/AdvancedBtn" to="." method="_on_advance_btn_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer/DifficulitiesButtons/CancelBtn" to="." method="_on_cancel_btn_pressed"]
[connection signal="item_selected" from="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer/LessonIds" to="." method="_on_lesson_ids_item_selected"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer/AddNewLessonsFileBtn" to="." method="_on_add_lessons_file_btn_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer/PlaygroundBtn" to="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer/PlaygroundBtn" method="_on_pressed"]
[connection signal="empty_clicked" from="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer2/LinesList" to="." method="_on_lines_list_empty_clicked"]
[connection signal="item_moved" from="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer2/LinesList" to="." method="_on_lines_list_item_moved"]
[connection signal="item_selected" from="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer2/LinesList" to="." method="_on_lines_list_item_selected"]
[connection signal="text_submitted" from="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer2/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/AddUpdteLineBtn" to="." method="_on_add_updte_line_btn_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/ResetBtn" to="." method="_on_reset_btn_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/HBoxContainer/VBoxContainer2/HBoxContainer/RemoveLineBtn" to="." method="_on_remove_line_btn_pressed"]
